--- a/index.html
+++ b/index.html
@@ -390,8 +390,10 @@ $(document).ready(function(){
 							</ul>
 						</section>
 						<section class="4u 6u$(medium) 12u$(small)">
-							<h3>Pourquoi ce projet § </h3>
-							<p>Tenetur voluptate exercitationem eius tempora! Obcaecati suscipit, soluta earum blanditiis.</p>
+							<h3>Pourquoi ce projet ? </h3>
+							<p> Nous sommes quatre étudiants en dernière année à l'ENSAE ParisTech et à la Paris School of Economics</p>
+							<p> Ce projet a été réalisé pour notre cours de Visualisation de données à l'ENSAE</p>
+							<p> Nous souhaitons mettre au profit nos compétences d'économistes statisticiens pour nous engager et mettre en lumière une situation complexe et cruciale de notre époque .</p>
 							<ul class="alt">
 								<li><a href="#">Lorem ipsum dolor sit amet.</a></li>
 								<li><a href="#">Id inventore, qui necessitatibus sunt.</a></li>
