--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script type="text/javascript" src="script4.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
 
 <!--		<script type="text/javascript" src="js/jquery.min.js"></script> -->
 		<script type="text/javascript" src="js/skel.min.js"></script>
@@ -28,6 +29,7 @@
 		<script type="text/javascript" src="js/init.js"></script>
 		<script type="text/javascript" src="counter.js"></script>
 		 <script type="text/javascript" src="quizz.js"></script>
+		<script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
