--- a/index.html
+++ b/index.html
@@ -324,6 +324,439 @@ $(document).ready(function(){
 		</div>
 
 		<h1 style="color:#004953"> Les initiatives que nous avons retenues </h1>
+		
+		<div class="container">
+		<div id="mainBubble" style="height: 869px;"><svg class="mainBubbleSVG" width="1240.3200000000002" height="869"><text id="bubbleItemNote" x="10" y="605.1600000000001" font-size="12" dominant-baseline="middle" alignment-baseline="middle" style="fill: rgb(136, 136, 136);">D3.js bubble menu developed by Shipeng Sun .</text></svg></div>
+			<script type="javascript">
+			   var w = window.innerWidth * 0.9 * 0.95;
+   var h = Math.ceil(w * 0.7);
+   var oR = 0;
+   var nTop = 0;
+
+   var svgContainer = d3.select("#mainBubble")
+     .style("height", h + "px");
+
+   var svg = d3.select("#mainBubble").append("svg")
+     .attr("class", "mainBubbleSVG")
+     .attr("width", w)
+     .attr("height", h)
+     .on("mouseleave", function() {
+       return resetBubbles();
+     });
+
+   var mainNote = svg.append("text")
+     .attr("id", "bubbleItemNote")
+     .attr("x", 20)
+     .attr("y", w / 2 - 15)
+     .attr("font-size", 20)
+     .attr("dominant-baseline", "middle")
+     .attr("alignment-baseline", "middle")
+     .style("fill", "#88888")
+     .text(function(d) {
+       return "Découvrez les initiatives que nous avons retenues !";
+     });
+
+   var root = {
+     "name": "bubble",
+     "children": [{
+       "name": "Accueil",
+       "description": "S'occuper des hébergements d'urgence et temporaires des réfugiés et demandeurs d'asile",
+       "children": [{
+         "name": "Utopia56",
+         "address": "http://www.utopia56.com/fr/user/register",
+         "note": "aider 2h, 1 jour ou d’avantage dans un Centre d’Accueil et d’Orientation à Paris ou près de Calais"
+       }, {
+         "name": "Singa Calm",
+         "address": "http://calm.singa.fr/", 
+          "note": "une chambre d’un particulier pour héberger un réfugié pendant 3 à 12 mois "
+       }, {
+         "name": "JRS",
+         "address": "http://www.jrsfrance.org/welcome-en-france-refugie/",
+         "note": "Aller là où personne ne va : héberger un demandeur d’asile pendant 4 à 6 semaines."
+       }]
+     }, {
+       "name": "Emploi",
+       "description": "Impliquer les entreprises et employés dans l'intégration des réfugiés",
+       "children": [{
+         "name": "Action Emploi Réfugiés",
+         "address": "http://www.actionemploirefugies.com/espace-editorial/notre-organisation-our-organization",
+         "note": "Une plateforme web d’offres et de demandes d’emplois pour les réfugiés"
+       }, {
+         "name": "Kodiko",
+         "address": "http://www.kodiko.fr/",
+         "note": "Un cadre d’entreprise en binôme avec un réfugié diplômé du supérieur pour intégrer le marché de l’emploi"
+       },{
+         "name": "Collège de France",
+         "address": "http://www.college-de-france.fr/site/programme-pause/index.htm", 
+         "note" : "Des subventions aux établissements d’enseignement supérieur et/ou de recherche publics projetant d’accueillir des scientifiques en situation d’urgence."
+       },]
+     }, {
+       "name": "Etudiants",
+       "description": "Les étudiants s'engagent ! ",
+       "children": [{
+         "name": "Wintegreat",
+         "address": "http://wintegreat.org/#_overview", 
+         "note" : "Un accélérateur social au sein des Universités et Grandes écoles"
+       }, {
+         "name": "Sciences Po Refugee Help",
+         "address": "http://www.refugeehelp.fr/", 
+         "note" : "Aide administrative et juridique à la procédure d’asile, leçons de Français, activités socio-culturelles et aide matérielle..les Sciences pistes s’engagent ! "
+       }, {
+         "name": "MigrENS",
+         "address": "http://www.migrens.ens.fr/", 
+         "note": "Le Programme Etudiant Invité est destiné à l'accueil des réfugié.e.s et des migrant.e.s étudiant.e.s du supérieur au sein de l'Ecole Normale Supérieure. "
+       }, {
+         "name": "Black Sheep",
+         "address": "http://blacksheephello.wixsite.com/blacksheep", 
+         "note" : "2 étudiantes, 11 mois et 12 pays pour repenser la politique d’intégration des réfugiés en France"
+       }]
+     }, {
+       "name": "Tech",
+       "description": "Réintégrer les scientifiques en exil, hackatons et tech au service des réfugiés",
+       "children": [{
+         "name": "Techfugees",
+       "address":"https://techfugees.com/", 
+         "note": "Big data, hackatons et tech pour trouver des solutions d’aide aux réfugiés"
+       }, {
+         "name": "Clouds over Sidra",
+         "address": "Une immersion à 360° dans le camp d'Al-Zaatari, plus grand camp de réfugiés en Jordanie"
+       }, {
+         "name": "The Displaced",
+         "address": "https://with.in/watch/the-displaced/", 
+         "note":"Des témoignages à 360° de trois enfants réfugiés de Syrie, du Soudan du Sud et d'Ukraine "
+       }]
+     },
+        {
+       "name": "Arts et Vie",
+       "description": "Profiles of Country",
+       "children": [{
+         "name": "Les Grands Voisins",
+         "address": "https://lesgrandsvoisins.org/leprojet/", 
+         "note":"Un village éphémère de 600 “mal-logés”, 400 professionnels (artistes, artisans, entrepreneurs sociaux ou associatifs…) sur le site de l’ancien hôpital Saint-Vincent de Paul…à découvrir avant la fin de l’été ! "
+       }, {
+         "name": "Les Cuistots Migrateurs",
+         "address": "http://lescuistotsmigrateurs.com/", 
+         "note":"Des réfugiés font découvrir leur cuisine traditionnelle (Ethiopie, Syrie, Inde, Iran, Irak, Syrie, Tchétchènie…)"
+       },{
+         "name": "Visa pour l'image",
+         "address": "http://www.rfi.fr/culture/20160902-europe-photographie-journalisme-visa-image-dorigny-behrakis-messinis-crise-refugies", 
+         "note" :"Festival Visa pour l'image de Perpignan, Septembre 2016"
+       }, {
+         "name": "Cinéma",
+         "address": "http://www.fondation-jeromeseydoux-pathe.com/Actu%20Immigrants ", 
+         "note":"Sélection de films par la Fondation Pathé-Seydoux autour de l'Immigration, jusqu'au 28 mars 2017 "
+       }, {
+         "name": "Running",
+         "address": "http://refugeesong.com/ ", 
+         "note":"La chanson Running de Andrea Pizziconi composée pour la Journée mondiale des réfugiés en 2016 "
+       },{
+         "name": "Sur ma route",
+         "address": "https://www.youtube.com/watch?v=Psr2nMh_ve0", 
+         "note":"Une partie des bénéfices de l'album des Kids United est reversée à l'UNICEF "
+       },{
+         "name": "Refugees of Rap",
+         "address": "https://noisey.vice.com/fr/article/refugees-of-rap-syriens-rappeurs-2015", 
+         "note":"Refugees of Rap : un duo de rap syrien"
+       }, {
+         "name": "BD Intéractive",
+         "address": "http://info.arte.tv/fr/no-mans-land-de-cyrille-pomes", 
+         "note":"No Man's Land de Cyrille Pomès"
+       }]
+     }, {
+       "name": "En direct",
+       "description": "Crop Data in 5 minutes grid",
+       "children": [{
+         "name": "UNHCR",
+         "address": "http://data2.unhcr.org/en/situations/mediterranean", 
+         "note": "Les chiffres actualisés des arrivées et disparitions en Méditerranée "
+       }, {
+         "name": "Jungle News",
+         "address": "(http://jungle-news.arte.tv/fr/", 
+         "note":"Jungle News : les dernières nouvelles de Calais"
+       },  {
+         "name": "The New Arrivals",
+         "address": "https://thenewarrivals.eu/", 
+         "note":"500 jours, 25 migrants, 4 journaux européens vont explorer pendant dix-huit mois la vie quotidienne des migrants dans leur pays d’accueil."
+       },{
+         "name": "Arte Reportage",
+         "address": "http://info.arte.tv/fr/refugies", 
+         "note":"A travers cinq destinations, vingt regards de cinéastes, de photographes, d'écrivains et de dessinateurs de bande dessinée, la série multimédia d'ARTE Reportage vous raconte les camps de réfugiés"
+       }]
+     }]
+   };
+
+   var bubbleObj = svg.selectAll(".topBubble")
+     .data(root.children)
+     .enter().append("g")
+     .attr("id", function(d, i) {
+       return "topBubbleAndText_" + i
+     });
+
+   console.log(root);
+   nTop = root.children.length;
+   oR = w / (1 + 3 * nTop);
+
+   h = Math.ceil(w / nTop * 3);
+   svgContainer.style("height", h + "px");
+
+   var colVals = d3.scale.category10();
+
+   bubbleObj.append("circle")
+     .attr("class", "topBubble")
+     .attr("id", function(d, i) {
+       return "topBubble" + i;
+     })
+     .attr("r", function(d) {
+       return oR;
+     })
+     .attr("cx", function(d, i) {
+       return oR * (3 * (1 + i) - 1);
+     })
+     .attr("cy", (h + oR) / 3)
+     .style("fill", function(d, i) {
+       return colVals(i);
+     }) // #1f77b4
+     .style("opacity", 0.3)
+     .on("mouseover", function(d, i) {
+       return activateBubble(d, i);
+     });
+
+   bubbleObj.append("text")
+     .attr("class", "topBubbleText")
+     .attr("x", function(d, i) {
+       return oR * (3 * (1 + i) - 1);
+     })
+     .attr("y", (h + oR) / 3)
+     .style("fill", function(d, i) {
+       return colVals(i);
+     }) // #1f77b4
+     .attr("font-size", 15)
+     .attr("text-anchor", "middle")
+     .attr("dominant-baseline", "middle")
+     .attr("alignment-baseline","middle")
+     .text(function(d) {
+       return d.name
+     })
+     .on("mouseover", function(d, i) {
+       return activateBubble(d, i);
+     });
+
+   for (var iB = 0; iB < nTop; iB++) {
+     var childBubbles = svg.selectAll(".childBubble" + iB)
+       .data(root.children[iB].children)
+       .enter().append("g");
+
+     var nSubBubble = Math.floor(root.children[iB].children.length/2.0);   
+
+     childBubbles.append("circle")
+       .attr("class", "childBubble" + iB)
+       .attr("id", function(d, i) {
+         return "childBubble_" + iB + "sub_" + i;
+       })
+       .attr("r", function(d) {
+         return oR / 3.0;
+       })
+       .attr("cx", function(d, i) {
+         return (oR * (3 * (iB + 1) - 1) + oR * 1.5 * Math.cos((i - 1) * 45 / 180 * 3.1415926));
+       })
+       .attr("cy", function(d, i) {
+         return ((h + oR) / 3 + oR * 1.5 * Math.sin((i - 1) * 45 / 180 * 3.1415926));
+       })
+       .attr("cursor", "pointer")
+       .style("opacity", 0.5)
+       .style("fill", "#eee")
+       .on("click", function(d, i) {
+         window.open(d.address);
+       })
+       .on("mouseover", function(d, i) {
+         //window.alert("say something");
+         var noteText = "";
+         if (d.note == null || d.note == "") {
+           noteText = d.address;
+         } else {
+           noteText = d.note;
+         }
+         d3.select("#bubbleItemNote").text(noteText);
+       })
+       .append("svg:title")
+       .text(function(d) {
+         return d.address;
+       });
+
+     childBubbles.append("text")
+       .attr("class", "childBubbleText" + iB)
+       .attr("x", function(d, i) {
+         return (oR * (3 * (iB + 1) - 1) + oR * 1.5 * Math.cos((i - 1) * 45 / 180 * 3.1415926));
+       })
+       .attr("y", function(d, i) {
+         return ((h + oR) / 3 + oR * 1.5 * Math.sin((i - 1) * 45 / 180 * 3.1415926));
+       })
+       .style("opacity", 0.5)
+       .attr("text-anchor", "middle")
+       .style("fill", function(d, i) {
+         return colVals(iB);
+       }) // #1f77b4
+       .attr("font-size", 10)
+       .attr("cursor", "pointer")
+       .attr("dominant-baseline", "middle")
+       .attr("alignment-baseline", "middle")
+       .text(function(d) {
+         return d.name
+       })
+       .on("click", function(d, i) {
+         window.open(d.address);
+       });
+
+   }
+
+   resetBubbles = function() {
+     w = window.innerWidth * 0.9 * 0.95;
+     oR = w / (1 + 3 * nTop);
+
+     h = Math.ceil(w / nTop * 2);
+     svgContainer.style("height", h + "px");
+
+     mainNote.attr("y", h - 10);
+
+     svg.attr("width", w);
+     svg.attr("height", h);
+
+     d3.select("#bubbleItemNote").text("Découvrez les initiatives que nous avons retenues");
+
+     var t = svg.transition()
+       .duration(650);
+
+     t.selectAll(".topBubble")
+       .attr("r", function(d) {
+         return oR;
+       })
+       .attr("cx", function(d, i) {
+         return oR * (3 * (1 + i) - 1);
+       })
+       .attr("cy", (h + oR) / 3);
+
+     t.selectAll(".topBubbleText")
+       .attr("font-size", 30)
+       .attr("x", function(d, i) {
+         return oR * (3 * (1 + i) - 1);
+       })
+       .attr("y", (h + oR) / 3);
+
+     for (var k = 0; k < nTop; k++) {
+       t.selectAll(".childBubbleText" + k)
+         .attr("x", function(d, i) {
+           return (oR * (3 * (k + 1) - 1) + oR * 1.5 * Math.cos((i - 1) * 45 / 180 * 3.1415926));
+         })
+         .attr("y", function(d, i) {
+           return ((h + oR) / 3 + oR * 1.5 * Math.sin((i - 1) * 45 / 180 * 3.1415926));
+         })
+         .attr("font-size", 8)
+         .style("opacity", 0.5);
+
+       t.selectAll(".childBubble" + k)
+         .attr("r", function(d) {
+           return oR / 3.0;
+         })
+         .style("opacity", 0.5)
+         .attr("cx", function(d, i) {
+           return (oR * (3 * (k + 1) - 1) + oR * 1.5 * Math.cos((i - 1) * 45 / 180 * 3.1415926));
+         })
+         .attr("cy", function(d, i) {
+           return ((h + oR) / 3 + oR * 1.5 * Math.sin((i - 1) * 45 / 180 * 3.1415926));
+         });
+
+     }
+   }
+
+   function activateBubble(d, i) {
+     // increase this bubble and decrease others
+     var t = svg.transition()
+       .duration(d3.event.altKey ? 7500 : 350);
+
+     t.selectAll(".topBubble")
+       .attr("cx", function(d, ii) {
+         if (i == ii) {
+           // Nothing to change
+           return oR * (3 * (1 + ii) - 1) - 0.6 * oR * (ii - 1);
+         } else {
+           // Push away a little bit
+           if (ii < i) {
+             // left side
+             return oR * 0.6 * (3 * (1 + ii) - 1);
+           } else {
+             // right side
+             return oR * (nTop * 3 + 1) - oR * 0.6 * (3 * (nTop - ii) - 1);
+           }
+         }
+       })
+       .attr("r", function(d, ii) {
+         if (i == ii)
+           return oR * 1.8;
+         else
+           return oR * 0.8;
+       });
+
+     t.selectAll(".topBubbleText")
+       .attr("x", function(d, ii) {
+         if (i == ii) {
+           // Nothing to change
+           return oR * (3 * (1 + ii) - 1) - 0.6 * oR * (ii - 1);
+         } else {
+           // Push away a little bit
+           if (ii < i) {
+             // left side
+             return oR * 0.6 * (3 * (1 + ii) - 1);
+           } else {
+             // right side
+             return oR * (nTop * 3 + 1) - oR * 0.6 * (3 * (nTop - ii) - 1);
+           }
+         }
+       })
+       .attr("font-size", function(d, ii) {
+         if (i == ii)
+           return 30 * 1.5;
+         else
+           return 30 * 0.6;
+       });
+
+     var signSide = -1;
+     for (var k = 0; k < nTop; k++) {
+       signSide = 1;
+       if (k < nTop / 2) signSide = 1;
+       t.selectAll(".childBubbleText" + k)
+         .attr("x", function(d, i) {
+           return (oR * (3 * (k + 1) - 1) - 0.6 * oR * (k - 1) + signSide * oR * 2.5 * Math.cos((i - 1) * 45 / 180 * 3.1415926));
+         })
+         .attr("y", function(d, i) {
+           return ((h + oR) / 3 + signSide * oR * 2.5 * Math.sin((i - 1) * 45 / 180 * 3.1415926));
+         })
+         .attr("font-size", function() {
+           return (k == i) ? 12 : 6;
+         })
+         .style("opacity", function() {
+           return (k == i) ? 1 : 0;
+         });
+
+       t.selectAll(".childBubble" + k)
+         .attr("cx", function(d, i) {
+           return (oR * (3 * (k + 1) - 1) - 0.6 * oR * (k - 1) + signSide * oR * 2.5 * Math.cos((i - 1) * 45 / 180 * 3.1415926));
+         })
+         .attr("cy", function(d, i) {
+           return ((h + oR) / 3 + signSide * oR * 2.5 * Math.sin((i - 1) * 45 / 180 * 3.1415926));
+         })
+         .attr("r", function() {
+           return (k == i) ? (oR * 0.55) : (oR / 3.0);
+         })
+         .style("opacity", function() {
+           return (k == i) ? 1 : 0;
+         });
+     }
+   }
+
+   window.onresize = resetBubbles;
+			</script> 
+		
+		</div>
 	</section>
 			
 
