--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<script type="text/javascript" src="js/init.js"></script>
 		<script type="text/javascript" src="counter.js"></script>
 		 <script type="text/javascript" src="quizz.js"></script>
-		<script type="text/javascript" src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script type="text/javascript" src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
