--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 						<li><a style="color:white" href="#two">L'Europe et les migrants</a></li>
 						<li><a style="color:white" href="#france">La France et les migrants</a></li>
 						<li><a style="color:white" href="#quizz">Quizz</a></li>
-						<li><a style="color:white" href="#init">Quelques initiatives</a></li>
+						<li><a style="color:white" href="#init">Initiatives</a></li>
+						<li><a style="color:white" href="#init">Les ENSAE</a></li>
 					</ul>
 				</nav>
 			</header>
