--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a style="color:white" href="#one">  De quoi parle-t-on ?</a></li>
-						<li><a style="color:white" href="#two">L'Europe et les migrants</a></li>
-						<li><a style="color:white" href="#france">La France et les migrants</a></li>
+						<li><a style="color:white" href="#two">En Europe</a></li>
+						<li><a style="color:white" href="#france">En France</a></li>
 						<li><a style="color:white" href="#quizz">Quizz</a></li>
 						<li><a style="color:white" href="#init">Initiatives</a></li>
 						<li><a style="color:white" href="#init">Les ENSAE</a></li>
