--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 		<!-- Frise Aliénor -->
 <!-- Frise : Attention, le fond n'est pas transparent-->
-			<h2> Quelques dates clé </h2>
+			<h2> Quelques dates clé du programme Européen en Mer Méditerranée</h2>
 <div class="container">
 <iframe src="https://www.preceden.com/timelines/301802/embed" scrolling="no" width="100%" height="450" frameborder="0">
  <a href="https://www.preceden.com" target="_top">Preceden Timeline Maker</a>
