--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<li><a style="color:white" href="#france">En France</a></li>
 						<li><a style="color:white" href="#quizz">Quizz</a></li>
 						<li><a style="color:white" href="#init">Initiatives</a></li>
-						<li><a style="color:white" href="#init">Les ENSAE</a></li>
+						<li><a style="color:white" href="#init2">Les ENSAE</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -801,14 +801,14 @@ $(document).ready(function(){
 
 <!-- Septieme partie -->	
 	
-	<section id="init" class="wrapper style13 align-center">
+	<section id="init2" class="wrapper style13 align-center">
 		<div style="font-size: 100px;">
 		<i class="fa fa-globe" style="color:#004953" aria-hidden="true"></i>
 		</div>
 
 		<h1 style="color:#004953"> Et les ENSAE dans tout ça ?  </h1>
 	</section>
--->
+		
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
