--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@ $(document).ready(function(){
          "note": "Big data, hackatons et tech pour trouver des solutions d’aide aux réfugiés"
        }, {
          "name": "Clouds over Sidra",
-         "address": "Une immersion à 360° dans le camp d'Al-Zaatari, plus grand camp de réfugiés en Jordanie"
+         "address": "https://with.in/watch/clouds-over-sidra/", 
+	   "note ": "Une immersion à 360° dans le camp d'Al-Zaatari, plus grand camp de réfugiés en Jordanie"
        }, {
          "name": "The Displaced",
          "address": "https://with.in/watch/the-displaced/", 
