--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@ $(document).ready(function(){
 		<h1 style="color:#004953"> Et les ENSAE dans tout ça ?  </h1>
 <div class="container" style="display:flex;justify-content:space-between;">
 	
-	<div style="color:#004953">  Test test   <br>
+	<div style="color:#004953">   <br>
 		<b>Camp’us solidaire </b> : lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. 
 		<br>
  <b>Ideas Box de Bibliothèques sans Frontières </b>   est une médiathèque en kit standardisée, facilement transportable et déployable sur le terrain (Jordanie, Colombie, Ethiopie, la région des Grands Lacs..et aussi en France). Un dispositif robuste et autonome énergétiquement qui propose un contenu adapté aux besoins des populations, à leur langue et leur culture.
