--- a/index.html
+++ b/index.html
@@ -813,7 +813,8 @@ $(document).ready(function(){
 		</div>
 
 		<h1 style="color:#004953"> Et les ENSAE dans tout ça ?  </h1>
-<div class="container" style="display:flex;justify-content:space-between;">
+<div class="container" style="display:flex;    text-align: justify;
+    text-justify: inter-word;">
 	
 	<div style="color:#004953,text-justify: inter-word;">   <br>
 		<b>Camp’us solidaire </b> : lancée par Bastien Vallée (ENSAE 2018) et trois étudiants de HEC (Agathe, Isabelle et François), cette association apolitique travaille en partenariat avec Fraternité en Irak et le Secours Catholique. Elle a recueilli 5200€ lors d’une campagne de crowdfunding solidaire en Octobre 2015. A long terme, Camp’us solidaire cherche à faire le lien entre les étudiants cherchant à agir concrètement et ceux qui ont besoin d’eux. 
