--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<h2> Réfugiés, demandeurs d'asile, déplacés internes... </h2>	
 		<div class="container"  style="display:flex;justify-content:space-between;" >
 					<div id="container"></div>
-				<div>  Définitions  <br>
+				<div style="color:#004953,text-justify: inter-word;">   Définitions  <br>
 					<b>Réfugié </b> : une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle, et qui “du fait de sa race, de sa religion, de sa nationalité, de son appartenance à un groupe social déterminé ou de ses opinions politiques craint avec raison d’être persécutée et ne peut se réclamer de la protection de ce pays ou en raison de ladite crainte ne peut y retourner”. Le terme réfugié est défini par la législation internationale : la Convention de Genève de 1951 interdit de refouler des réfugiés dans un pays où leur vie est en danger. Cette convention a été ratifiée par 145 membres des Nations unies, dont tous les pays de l’Union européenne
 				<br>
 <b>“Migrant”</b>  : toute personne née dans un pays et qui vit dans un autre pour une durée égale ou supérieure à un an, que ce soit par choix, par nécessité ou contrainte. Un “migrant” n’est pas une statut juridique mais une catégorie générale à laquelle appartiennent notamment les réfugiés, mais aussi les étudiants étrangers ou les travailleurs venus d’un autre pays. 
@@ -113,7 +113,7 @@
 
 <div class="container" style="display:flex;justify-content:space-between;">
 	
-	<div style="color:#004953">  Définitions  <br>
+	<div style="color:#004953,text-justify: inter-word;">   Définitions  <br>
 		Un <b> réfugié </b> est une personne qui se trouve hors du pays dont elle a la nationalité ou dans lequel elle a sa résidence habituelle; qui craint avec raison d’y être persécutée du fait de son appartenance communautaire, de sa religion, de sa nationalité, de son appartenance à un certain groupe social ou de ses opinions politiques, et qui ne peut ou ne veut se réclamer de la protection de ce pays ou y retourner en raison de la dite crainte.
 		<br>
 		Le bénéfice de la <b> protection subsidiaire </b> est accordé à toute personne dont la situation ne répond pas à la définition du statut de réfugié mais pour laquelle il existe des motifs sérieux et avérés de croire qu'elle courrait dans son pays un risque réel de subir une atteinte grave (peine de mort, torture, traitement inhumain, conflit armé, etc.).
