--- a/index.html
+++ b/index.html
@@ -431,6 +431,10 @@ $(document).ready(function(){
          "name": "The Displaced",
          "address": "https://with.in/watch/the-displaced/", 
          "note":"Des témoignages à 360° de trois enfants réfugiés de Syrie, du Soudan du Sud et d'Ukraine "
+       },  {
+         "name": "Jeu intéractif Arte",
+         "address": "https://with.in/watch/clouds-over-sidra/", 
+	   "note ": "Dans la peau d'un envoyé spécial pour raconter les camps de refugiés au Népal, en Irak et au Liban. "
        }]
      },
         {
