--- a/index.html
+++ b/index.html
@@ -876,6 +876,9 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<ul class="tabular">
 																<li>
 									<h3>Mail</h3>
+									Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? 								
+									
+									N'hésitez pas à nous écrire !								
 									<a href="#">lumieresurlesmigrations@gmail.com</a>
 								</li>
 								
