--- a/index.html
+++ b/index.html
@@ -877,8 +877,8 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 																<li>
 									<h3>Mail</h3>
 									Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? 								
-									
-									N'hésitez pas à nous écrire !								
+									Vous avez une remarque ou voulez en savoir plus sur notre projet ? 
+									N'hésitez pas à nous contacter :								
 									<a href="#">lumieresurlesmigrations@gmail.com</a>
 								</li>
 								
