--- a/index.html
+++ b/index.html
@@ -875,10 +875,10 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							</ul>
 							<ul class="tabular">
 																<li>
-									<h3>Mail</h3>
+									<h3>Nous contacter</h3>
 									Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? 								
 									Vous avez une remarque ou voulez en savoir plus sur notre projet ? 
-									N'hésitez pas à nous contacter :								
+									N'hésitez pas à nous écrire :								
 									<a href="#">lumieresurlesmigrations@gmail.com</a>
 								</li>
 								
