--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							</ul>
 							<ul class="tabular">
 																<li>
-									<h3>Nous contacter</h3>
+									<h3>Contact</h3>
 									Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? 								
 									Vous avez une remarque ou voulez en savoir plus sur notre projet ? 
 									N'hésitez pas à nous écrire :								
