--- a/index.html
+++ b/index.html
@@ -876,9 +876,9 @@ Enguérand Acquérone (ENSAE 2018) avait envoyé un mail-co en septembre 2015 po
 							<ul class="tabular">
 																<li>
 									<h3>Contact</h3>
-									Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? 								
+									<p>Vous connaissez une initiative et souhaitez qu'elle apparaisse sur notre site ? 								
 									Vous avez une remarque ou voulez en savoir plus sur notre projet ? 
-									N'hésitez pas à nous écrire :								
+									N'hésitez pas à nous écrire :</p>								
 									<a href="#">lumieresurlesmigrations@gmail.com</a>
 								</li>
 								
